# MusicBeatDetector

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: tests.yml
MusicBeatDetector/: CMakeLists.txt
MusicBeatDetector/include/MusicBeatDetector/: Dummy.h  MusicBeatDetector.h
MusicBeatDetector/include/MusicBeatDetector/Obtain/: BeatClassifier.h  BpmEstimator.h  CbssCalculator.h  OssCalculator.h  OssGenerator.h  TempoEstimator.h
MusicBeatDetector/include/MusicBeatDetector/Utils/: ClassMacro.h  TypeTraits.h
MusicBeatDetector/include/MusicBeatDetector/Utils/Data/: ArrayToPcmConverter.h  AudioFrame.h  PackedAudioFrame.h  PcmAudioFrame.h  PcmAudioFrameFormat.h  PcmToArrayConverter.h  ShiftRegister.h
MusicBeatDetector/include/MusicBeatDetector/Utils/Exception/: InvalidValueException.h  LoggedException.h  NotSupportedException.h  PropertyNotFoundException.h  PropertyParseException.h
MusicBeatDetector/include/MusicBeatDetector/Utils/Math/: CrossCorrelationCalculator.h  FftCalculator.h  Math.h
MusicBeatDetector/src/: Dummy.cpp  MusicBeatDetector.cpp
MusicBeatDetector/src/Obtain/: BeatClassifier.cpp  BpmEstimator.cpp  CbssCalculator.cpp  OssCalculator.cpp  OssGenerator.cpp  TempoEstimator.cpp
MusicBeatDetector/src/Utils/Data/: PcmAudioFrame.cpp  PcmAudioFrameFormat.cpp
MusicBeatDetector/src/Utils/Exception/: InvalidValueException.cpp  LoggedException.cpp  NotSupportedException.cpp  PropertyNotFoundException.cpp  PropertyParseException.cpp
MusicBeatDetector/src/Utils/Math/: CrossCorrelationCalculator.cpp  FftCalculator.cpp
MusicBeatDetector/test/: CMakeLists.txt
MusicBeatDetector/test/resources/: beat_float.raw  beat_signed_16.raw
MusicBeatDetector/test/src/: DummyTests.cpp  MusicBeatDetectorTests.cpp
MusicBeatDetector/test/src/Obtain/: BeatClassifierTests.cpp  BpmEstimatorTests.cpp  CbssCalculatorTests.cpp  OssCalculatorTests.cpp  OssGeneratorTests.cpp  TempoEstimatorTests.cpp
MusicBeatDetector/test/src/Utils/Data/: ArrayToPcmConverterTests.cpp  AudioFrameTests.cpp  PackedAudioFrameTests.cpp  PcmAudioFrameFormatTests.cpp  PcmAudioFrameTests.cpp  PcmToArrayConverterTests.cpp  ShiftRegisterTests.cpp
MusicBeatDetector/test/src/Utils/Exception/: InvalidValueExceptionTests.cpp  LoggedExceptionTests.cpp  NotSupportedExceptionTests.cpp  PropertyNotFoundExceptionTests.cpp  PropertyParseExceptionTests.cpp
MusicBeatDetector/test/src/Utils/Math/: CrossCorrelationCalculatorTests.cpp  FftCalculatorTests.cpp  MathTests.cpp
Utils/: CMakeLists.txt
Utils/include/Utils/: ClassMacro.h  Math.h  TypeTraits.h
Utils/include/Utils/Data/: ArrayToPcmConverter.h  AudioFrame.h  PcmAudioFrame.h  PcmAudioFrameFormat.h  PcmToArrayConverter.h  ShiftRegister.h
Utils/include/Utils/Exception/: InvalidValueException.h  LoggedException.h  NotSupportedException.h  PropertyNotFoundException.h  PropertyParseException.h
Utils/include/Utils/Math/: CrossCorrelationCalculator.h  Math.h
Utils/src/Data/: PcmAudioFrame.cpp  PcmAudioFrameFormat.cpp
Utils/src/Exception/: InvalidValueException.cpp  LoggedException.cpp  NotSupportedException.cpp  PropertyNotFoundException.cpp  PropertyParseException.cpp
Utils/src/Math/: CrossCorrelationCalculator.cpp
Utils/test/: CMakeLists.txt
Utils/test/src/: MathTests.cpp
Utils/test/src/Data/: ArrayToPcmConverterTests.cpp  AudioFrameTests.cpp  PcmAudioFrameFormatTests.cpp  PcmAudioFrameTests.cpp  PcmToArrayConverterTests.cpp  ShiftRegisterTests.cpp
Utils/test/src/Exception/: InvalidValueExceptionTests.cpp  LoggedExceptionTests.cpp  NotSupportedExceptionTests.cpp  PropertyNotFoundExceptionTests.cpp  PropertyParseExceptionTests.cpp
Utils/test/src/Math/: CrossCorrelationCalculatorTests.cpp  MathTests.cpp
